hit/miss ratio added

--- a/src/app/teaching-phase/teaching-phase.component.html
+++ b/src/app/teaching-phase/teaching-phase.component.html
@@ -86,3 +86,6 @@
     </div>
   </div>
 </div>
+<div>
+  <h2 style="padding-top: 1em;">The hit/miss ratio is {{ hitCount$ | async }} : {{ missCount$ | async }} at {{ time | async }}.</h2>
+</div>
