--- a/src/app/teaching-phase/teaching-phase.component.html
+++ b/src/app/teaching-phase/teaching-phase.component.html
@@ -68,7 +68,7 @@
   <h2 style="padding-top: 1em;">The solution was</h2>
   <div class="ui grid">
     <div
-      *ngFor="let icon of usedIcons.split(''); let idx = index"
+      *ngFor="let icon of usedIcons; let idx = index"
       class="three wide column"
     >
       <div class="three wide column">
