--- a/src/app/teaching-phase/teaching-phase.component.html
+++ b/src/app/teaching-phase/teaching-phase.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="'teach' == getState()" class="ui container">
+<div *ngIf="ComponentState.Teach == getState()" class="ui container">
   <h1>Teaching Phase</h1>
   <div class="ui grid">
     <div class="column">
@@ -10,37 +10,37 @@
 </div>
 
 <div
-  *ngIf="'testIcons' == getState() || 'testColors' == getState()"
+  *ngIf="ComponentState.TestIcons == getState() || ComponentState.TestColors == getState()"
   class="ui container"
 >
   <h1>Testing Phase</h1>
   <div class="three wide column" style="padding-bottom: 1em;">
-    <p>Click in the order of appearence.</p>
+    <p>Click in the order of appearance.</p>
   </div>
-  <div *ngIf="'testIcons' == getState()" class="ui grid">
+  <div *ngIf="ComponentState.TestIcons == getState()" class="ui grid">
     <div
-      *ngFor="let iconName of iconNames; let idx = index"
+      *ngFor="let iconName of iconNames"
       class="three wide column"
     >
-      <button (click)="guessIcon(idx)" class="ui massive white icon button">
-        <i class="black {{ iconName }} icon "></i>
+      <button (click)="guessIcon(iconName)" class="ui massive white icon button">
+        <i class="black {{ iconName }} icon"></i>
       </button>
     </div>
   </div>
-  <div *ngIf="'testColors' == getState()" class="ui grid">
+  <div *ngIf="ComponentState.TestColors == getState()" class="ui grid">
     <div
-      *ngFor="let color of colorNames; let idx = index"
+      *ngFor="let color of colorNames"
       class="three wide column"
     >
       <button
-        (click)="guessColor(idx)"
+        (click)="guessColor(color)"
         class="ui massive icon button {{ color }}"
       ></button>
     </div>
   </div>
 </div>
 
-<div *ngIf="'correct' == getState()" class="ui container">
+<div *ngIf="ComponentState.Correct == getState()" class="ui container">
   <h1>Congratulations!</h1>
   <div class="ui grid">
     <div class="column">
@@ -51,7 +51,7 @@
   </div>
 </div>
 
-<div *ngIf="'false' == getState()" class="ui container">
+<div *ngIf="ComponentState.False == getState()" class="ui container">
   <h1>Sorry</h1>
   <div class="ui grid">
     <div class="column">
@@ -62,7 +62,7 @@
   </div>
 </div>
 <div
-  *ngIf="'correct' == getState() || 'false' == getState()"
+  *ngIf="ComponentState.Correct == getState() || ComponentState.False == getState()"
   class="ui container"
 >
   <h2 style="padding-top: 1em;">The solution was</h2>
