score display layout

--- a/src/app/teaching-phase/teaching-phase.component.html
+++ b/src/app/teaching-phase/teaching-phase.component.html
@@ -85,7 +85,7 @@
       </button>
     </div>
   </div>
-</div>
-<div>
-  <h2 style="padding-top: 1em;">The hit/miss ratio is {{ hitCount$ | async }} : {{ missCount$ | async }} at {{ time | async }}.</h2>
+  <div>
+    <h2 style="padding-top: 1em;">Your hit/miss ratio is {{ hitCount$ | async }} : {{ missCount$ | async }}.</h2>
+  </div>
 </div>
